fix: word wrap on firefox

--- a/style.css
+++ b/style.css
@@ -69,12 +69,11 @@ body::-webkit-scrollbar-thumb {
 
 #colored {
 	position: absolute;
-	white-space: pre;
+	white-space: pre-wrap;
 	top: 0;
 	left: 0;
 	z-index: -1;
 	width: 100%;
-	text-wrap: inherit;
 	word-wrap:break-word;
 }
 
